src/com/kalessil/phpStorm/phpInspectionsEA/tests/api/fixtures/uniqid.php
<?php
    <error descr="Please provide both prefix and more entropy parameters">uniqid()</error>;
    <error descr="Please provide both prefix and more entropy parameters">uniqid('q')</error>;

    uniqid('', true);